<resources>
    <string name="app_name">WarpDelivery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="swipe_left_for_register">Swipe Left to Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="swipe_right_for_login">Swipe Right to Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone number</string>
    <string name="refresh">Refresh</string>
    <string name="vehicles">Vehicles</string>
    <string name="user">User</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="tracking">Tracking</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="delivery_item_store">Store: %s</string>
    <string name="delivery_item_date">Date: %s</string>
    <string name="delivery_item_storeAddress">Store Address: %s</string>

    <string name="delivery_item_type">Type: %s</string>
    <string name="delivery_item_rating">Rating: %s</string>
    <string name="delivery_item_clientPhone">Client Phone: %s</string>
    <string name="delivery_item_reward">Reward: %s</string>
    <string name="delivery_item_state">State: %s</string>
    <string name="logout">LOGOUT</string>
    <string name="set_active">SET ACTIVE</string>
    <string name="set_inactive">SET INACTIVE</string>
    <string name="channel_name">notifications</string>
    <string name="channel_description">Delivery Notifications</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="small">small</string>
    <string name="finish_delivery">Finish delivery</string>
    <string name="confirm_pickup">RETRIEVED</string>
    <string name="title_activity_delivery_info">DeliveryInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_vehicle_fail">Failed to add vehicle</string>
    <string name="user_update_fail">Failed to update user info</string>
    <string name="vehicle_registration">Registration: %1$s </string>
    <string name="vehicle_type">Type: %1$s</string>
    <string name="edit_field">Insert a new %1$s please</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="vehicle_registration_title">Vehicle Registration</string>
    <string name="ok">OK</string>
    <string name="registration_empty_tip">Please fill out the registration field</string>
    <string name="vehicle_remove_fail">Failed to remove</string>
    <string name="firestore_updates_fail">Couldn\'t subscribe to firestore updates</string>
    <string name="set_active_fail">Failed to set active</string>
    <string name="get_vehicles_fail">Failed get vehicles</string>
    <string name="set_inactive_fail">Failed to set as inactive</string>
    <string name="delivery_confirm_fail">Failed to confirm current delivery</string>
    <string name="delivery_location_title">Delivery location</string>
    <string name="pickup_location_title">Pickup Location</string>
    <string name="no_vehicles_error">You have no vehicles, please add one</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="vehicles_update_error">Error updating vehicles</string>
    <string name="empty_field_error">Please fill in the field</string>
    <string name="empty_fields_error">Please fill in all the fields</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="invalid_details_error">Invalid username / password combo</string>
    <string name="delete_vehicle_tip">Hold on a vehicle to delete it</string>
    <string name="delivery_revoke_fail">Failed to revoke delivery</string>
    <string name="revoke_delivery">Revoke delivery</string>
    <string name="delivery_info">delivery info</string>
    <string name="store_info">Store Information</string>
    <string name="delivery_get_fail">Failed to get delivery info</string>
    <string name="client_phone_title">Client Phone:</string>
    <string name="store_address_title">Store Address:</string>
    <string name="store_name_title">Store Name Title:</string>
    <string name="client_address_title">Client Address:</string>
    <string name="delivery_update_error">Error updating deliveries</string>
    <string name="store_title">Store :</string>
    <string name="state_looking">Looking for warper</string>
    <string name="state_delivering">Delivering</string>
    <string name="state_delivered">Delivered</string>
    <string name="state_cancelled">Cancelled</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Small</string>
    <string name="center_button_description">Center map on position</string>
    <string name="balance">Balance</string>
</resources>