<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/client_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_phone_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/client_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deliver_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_address_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deliver_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/store_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_address_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/store_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>